[project]
name = "pysubs2"
dynamic = ["version"]
description = "A library for editing subtitle files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Tomas Karabela", email = "tkarabela@seznam.cz" },
]
keywords = [
    "SubStation", "SubRip", "MicroDVD", "MPL2", "WebVTT",
    "ass", "srt", "sub", "vtt", "subtitles", "captions",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Multimedia :: Video",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/tkarabela/pysubs2"
Documentation = "https://pysubs2.readthedocs.io"
"Bug Tracker" = "https://github.com/tkarabela/pysubs2/issues"

[project.scripts]
pysubs2 = "pysubs2.cli:__main__"

[dependency-groups]
dev = [
    "pytest~=8.3",
    "pytest-cov~=5.0",
    "pytest-timeout~=2.3",
    "mypy~=1.11",
    "ruff~=0.5",
]
docs = [
    "sphinx==8.2.3; python_version >= '3.11'",
    "sphinx-rtd-theme==3.1.0; python_version >= '3.11'",
    "enum-tools[sphinx]==0.13.0; python_version >= '3.11'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pysubs2/common.py"

[tool.hatch.build.targets.sdist]
include = [
    "pysubs2/",
    "tests/",
]

[tool.hatch.build.targets.wheel]
packages = ["pysubs2"]

[tool.mypy]
files = ["pysubs2", "tests/test_*.py"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
