[metadata]
name = pysubs2
version = attr: pysubs2.common.VERSION
author = Tomas Karabela
author_email = tkarabela@seznam.cz
description = A library for editing subtitle files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tkarabela/pysubs2
keywords = SubStation, SubRip, MicroDVD, MPL2, WebVTT, ass, srt, sub, vtt, subtitles, captions
license = MIT
project_urls =
    Documentation = https://pysubs2.readthedocs.io
    Bug Tracker = https://github.com/tkarabela/pysubs2/issues
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup
    Topic :: Multimedia :: Video
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Typing :: Typed

[options]
packages =
    pysubs2
    pysubs2.formats
python_requires = >=3.9

[options.entry_points]
console_scripts =
    pysubs2 = pysubs2.cli:__main__

[mypy]
files = pysubs2, tests/test_*.py

[coverage:run]
branch = True

[coverage:report]
show_missing = True
skip_covered = True
